--- a/src/App.css
+++ b/src/App.css
@@ -11,12 +11,27 @@
 	/* position: relative; */
 }
 
+.container{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .card {
 	width: 16%;
 	margin: 1rem;
 	padding: 1rem;
 	border-radius: 1rem !important;
 	box-shadow: 0 0 2px 1px rgba(128, 128, 128, 0.3) !important;
+}
+@media screen and (max-width:480px){
+  .container{
+    display: flex;
+    flex-direction: column;
+  }
+  .card{
+    width: 80%;
+  }
 }
 .card:hover {
 	box-shadow: 0 0 6px 2px rgba(128, 128, 128, 0.582) !important;
